--- a/luxclusif.order.webapi/appsettings.Development.json
+++ b/luxclusif.order.webapi/appsettings.Development.json
@@ -4,5 +4,16 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "PrincipalDatabase": "Server=luxclusif-order-postgres;User Id=postgres;Database=luxclusif.order;Port=5432;Password=P@ssw0rd;SSLMode=Disable",
+    "HangfireConnection": "Server=luxclusif-order-postgres;User Id=postgres;Database=luxclusif.order.hangfire;Port=5432;Password=P@ssw0rd;SSLMode=Disable"
+  },
+  "rabbitmq": {
+    "hostName": "luxclusif-order-rabbitmq",
+    "hostPort": null,
+    "virtualHost": "",
+    "username": "guest",
+    "password": "guest"
   }
 }
