--- a/luxclusif.order.webapi/appsettings.json
+++ b/luxclusif.order.webapi/appsettings.json
@@ -6,9 +6,5 @@
       "Hangfire": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "PrincipalDatabase": "Server=luxclusif-order-postgres;User Id=postgres;Database=luxclusif.order;Port=5432;Password=P@ssw0rd;SSLMode=Disable",
-    "HangfireConnection": "Server=luxclusif-order-postgres;User Id=postgres;Database=luxclusif.order.hangfire;Port=5432;Password=P@ssw0rd;SSLMode=Disable"
-  }
+  "AllowedHosts": "*"
 }
